[gd_scene load_steps=13 format=3 uid="uid://cojogpryiq3t4"]

[ext_resource type="Script" path="res://main/Player.gd" id="1_52aex"]
[ext_resource type="Texture2D" uid="uid://cabuobuwr3odx" path="res://assets/button.png" id="1_wtf30"]
[ext_resource type="Texture2D" uid="uid://b1njdfgf8t6vj" path="res://assets/upgrade1.png" id="3_jge67"]
[ext_resource type="Script" path="res://main/Upgrade1.gd" id="3_mlg3h"]
[ext_resource type="Texture2D" uid="uid://bohptnckywijh" path="res://assets/upgrade2.png" id="6_41020"]
[ext_resource type="Texture2D" uid="uid://cd2l715eh0ilp" path="res://assets/SettingsButton.png" id="6_q8aw3"]

[sub_resource type="Animation" id="Animation_6mnhd"]
resource_name = "Click"
length = 0.04
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_5j74j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Upgrade1/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g5326"]
_data = {
"Click": SubResource("Animation_6mnhd"),
"RESET": SubResource("Animation_5j74j")
}

[sub_resource type="Animation" id="Animation_24jpi"]
resource_name = "ClickUpgrade1"
length = 0.04
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_on5oj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kkvej"]
_data = {
"ClickUpgrade1": SubResource("Animation_24jpi"),
"RESET": SubResource("Animation_on5oj")
}

[node name="Main" type="Node2D"]

[node name="Guzik" type="Node2D" parent="."]
texture_filter = 1
position = Vector2(590, 322)
script = ExtResource("1_52aex")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="Guzik"]
offset_left = -39.0
offset_top = -39.0
offset_right = 39.0
offset_bottom = 39.0
theme_type_variation = &"FlatButton"

[node name="Sprite2D" type="Sprite2D" parent="Guzik"]
scale = Vector2(5, 5)
texture = ExtResource("1_wtf30")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Guzik"]
libraries = {
"": SubResource("AnimationLibrary_g5326")
}

[node name="AutoClickTimer" type="Timer" parent="Guzik"]
autostart = true

[node name="Kliknięcia" type="Label" parent="."]
offset_left = 329.0
offset_top = 48.0
offset_right = 793.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 81
text = "Kliknięcia: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Nie stać cię na to" type="Label" parent="."]
offset_left = 541.0
offset_top = 212.0
offset_right = 581.0
offset_bottom = 235.0
text = "Placeholder"

[node name="Modyfikator CPS" type="Label" parent="."]
offset_left = 336.0
offset_top = 471.0
offset_right = 619.0
offset_bottom = 515.0
theme_override_font_sizes/font_size = 31
text = "Modyfikator CPS: 0"

[node name="AutoClick" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 272.5
offset_top = 421.0
offset_right = 857.5
offset_bottom = 465.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 31
text = "Automatyczne kliknięcia na sekundę: 0"

[node name="Upgrade1" type="Node2D" parent="."]
position = Vector2(115, 326)
script = ExtResource("3_mlg3h")
metadata/_edit_group_ = true

[node name="Upgrade" type="Button" parent="Upgrade1"]
offset_left = -41.0
offset_top = -41.0
offset_right = 41.0
offset_bottom = 41.0

[node name="Sprite2D" type="Sprite2D" parent="Upgrade1"]
texture_filter = 1
position = Vector2(0, -0.999996)
scale = Vector2(5, 5)
texture = ExtResource("3_jge67")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Upgrade1"]
libraries = {
"": SubResource("AnimationLibrary_kkvej")
}

[node name="Label" type="Label" parent="Upgrade1"]
offset_left = -64.0
offset_top = -136.0
offset_right = 63.0
offset_bottom = -87.0
text = "Upgrade +1 click
50"
horizontal_alignment = 1

[node name="Upgrade2" type="Node2D" parent="."]
position = Vector2(118, 546)
script = ExtResource("3_mlg3h")
metadata/_edit_group_ = true

[node name="Upgrade2" type="Button" parent="Upgrade2"]
offset_left = -41.0
offset_top = -41.0
offset_right = 41.0
offset_bottom = 41.0

[node name="Sprite2D" type="Sprite2D" parent="Upgrade2"]
texture_filter = 1
position = Vector2(0, -0.999996)
scale = Vector2(5, 5)
texture = ExtResource("6_41020")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Upgrade2"]
libraries = {
"": SubResource("AnimationLibrary_kkvej")
}

[node name="Label" type="Label" parent="Upgrade2"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -134.0
offset_right = 83.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 0
text = "Upgrade +1 AutoClick
100"
horizontal_alignment = 1

[node name="Settings" type="Node2D" parent="."]
position = Vector2(1063, 23)

[node name="GoToSettingsButton" type="Button" parent="Settings"]
offset_left = -21.0
offset_top = -21.0
offset_right = 79.0
offset_bottom = 80.0
theme_type_variation = &"FlatButton"

[node name="Sprite2D" type="Sprite2D" parent="Settings"]
texture_filter = 1
position = Vector2(29.25, 29.25)
scale = Vector2(2.42683, 2.42683)
texture = ExtResource("6_q8aw3")

[connection signal="pressed" from="Guzik/Button" to="Guzik" method="_on_button_pressed"]
[connection signal="timeout" from="Guzik/AutoClickTimer" to="Guzik" method="_on_timer_timeout"]
[connection signal="pressed" from="Upgrade1/Upgrade" to="Guzik" method="_on_upgrade_pressed"]
[connection signal="pressed" from="Upgrade1/Upgrade" to="Upgrade1" method="_on_upgrade_pressed"]
[connection signal="pressed" from="Upgrade2/Upgrade2" to="Guzik" method="_on_upgrade_2_pressed"]
[connection signal="pressed" from="Upgrade2/Upgrade2" to="Upgrade2" method="_on_upgrade_2_pressed"]
[connection signal="pressed" from="Settings/GoToSettingsButton" to="Guzik" method="_on_go_to_settings_button_pressed"]
